[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/code/rooftop_level/running_eagor.gd" type="Script" id=1]
[ext_resource path="res://assets/art/rooftop_level/sprites/S7_running_eagor/S7_running_eagor.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/object_sounds/SD21_sword_hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/gui/hud/enemy_healthbar.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.07079, 14.5706 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8.79155, 16 )

[node name="S7_running_eagor" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 11
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.093895, -16.0562 )
frames = SubResource( 5 )
animation = "run"
frame = 2
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0707878, -15.4294 )
shape = SubResource( 6 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( -0.328633, -15.5868 )
scale = Vector2( 1.22066, 1.57277 )
process_parent = true
physics_process_parent = true

[node name="sword_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="healthbar" parent="." instance=ExtResource( 4 )]
margin_left = -7.62543
margin_top = -41.6051
margin_right = 8.37457
margin_bottom = -35.6051

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 7 )
[connection signal="death" from="." to="." method="_on_S7_running_eagor_death"]
[connection signal="health_changed" from="." to="." method="_on_S7_running_eagor_health_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
